--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
     compileSdkVersion 27
 
     defaultConfig {
-        applicationId "com.layoutxm1.sabs"
+        applicationId "cep.block4ads.tool"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 530
